Fix layout bug for short pages on large screens

--- a/src/web/scss/common/_layout.scss
+++ b/src/web/scss/common/_layout.scss
@@ -25,7 +25,7 @@
         [breakout-end]
         $gutter-min-width
         [full-width-end];
-
+    grid-auto-rows: min-content;
     --content-width: content;
 
     & > * {
